# dataflow

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dataflow.cbp  dataflow.hpp  main.cpp
CMakeModules/: CodeCoverage.cmake
include/: dataflow.hpp
test/: test.hpp
